Revision history for mariadb-plugin-saslauthd

1.3  2018-06-04 06:05:49 CEST

  - Include my_global.h instead of my_sys.h.

1.2  2017-09-02 07:25:32 CEST

  - Add /usr/include/mysql/server to the include path.

1.1  2017-07-22 08:00:37 CEST

  - Use strerror_r() instead of strerror().
  - Add .travis.yml.

1.0  2017-07-09 16:49:48 CEST

  - First version, released on an unsuspecting world.
