@@ -3,6 +3,7 @@ Revision history for mariadb-plugin-saslauthd
 1.3  2018-06-04 06:05:49 CEST
 
   - Include my_global.h instead of my_sys.h.
+  - Use maria_declare_plugin if available.
 
 1.2  2017-09-02 07:25:32 CEST
 
